Manager and organizer create and patch
* ADD: event docs

* DOC: event docs update

* updated event docs

* merge dev

* FIX: routes, ADD:organisers and managers

* DEL: package-lock

* FIX:auth

* ADD: Module data with all Events data nested controller

* FIX: getmodulebyId, event/create

* PATCH: event docs

* FIX: event docs

* ADD: input typecheck for event/module

* FIX: uncommented code

* FIX: module docs

* FIX: event nested docs

* PATCH:event doc update

* FIX: matched DELETE route event/module docs

* FIX: moved getEventsByModule to Module routes

* FIX:minor changes

* MERGE:dev

* FIX: code cleanup

* PATCH: event body includes module

* PATCH: event/module docs

* ADD: organizers and managers on event create. FIX: event dates fixes

* PATCH: organizers now accept array of strings PATCH: utility update

* PATCH: docs update

* FIX: minor fixes

* FIX: minor fixes

* FIX: docs fixes
