# docs/swagger.yaml
@@ -1286,19 +1286,13 @@ paths:
                 organizers:
                   type: array
                   items:
-                    type: object
-                    properties:
-                      username:
-                        type: string
-                        example: "mohan"
+                    type: string
+                    example: "mohan"
                 managers:
                   type: array
                   items:
-                    type: object
-                    properties:
-                      username:
-                        type: string
-                        example: "rohan"
+                    type: string
+                    example: "rohan"
                 extraQuestions: 
                   type: array
                   items:
